# civitai_api

./: README.md  pyproject.toml
.github/workflows/: basic.yml
src/civitai_api/: api.py  api.pyi  v1.pyi
src/civitai_api/models/: creators.py  creators.pyi  images.py  images.pyi  model_by_hash.py  model_by_version_id.py  model_by_version_id.pyi  models.py  models.pyi  models_by_id.py  models_by_id.pyi
src/civitai_api/v1/: __init__.py  __init__.pyi  api.py
src/civitai_api/v1/models/: creators.py  creators.pyi  creators_endpoint.py  images.py  images.pyi  modelId_endpoint.py  model_by_hash.pyi  model_by_version_id.py  model_by_version_id.pyi  models.py  models.pyi  models_by_id.py  models_by_id.pyi  models_endpoint.py  tags.py  tags.pyi  tags_endpoint.py  versionId_endpoint.py
src/civitai_api/v1/models/base/: misc.py  modelVersion.py
tests/: test_api.py  test_env.py  test_v1.py
